--- a/index.html
+++ b/index.html
@@ -3,19 +3,19 @@ POLITIQUE DE CONFIDENTIALITÉ<br>
 1- Collecte de données<br>
 Notre application de théâtre ne collecte aucune information personnelle identifiable de ses utilisateurs. Nous ne collectons pas de données telles que le nom, l'adresse e-mail, le numéro de téléphone ou toute autre information personnelle.<br>
 <br>
-2- Données de localisation
+2- Données de localisation<br>
 Notre application ne collecte pas non plus les données de localisation de ses utilisateurs. Nous ne suivons pas, n'enregistrons pas et n'utilisons pas les informations relatives à votre emplacement géographique.<br>
 <br>
-3- Données de navigation
+3- Données de navigation<br>
 Lorsque vous utilisez notre application, nous pouvons collecter des informations de journalisation standard, telles que l'adresse IP de votre appareil, le type de navigateur, les pages que vous visitez et la durée de votre visite. Cependant, ces informations sont anonymes et ne permettent pas de vous identifier personnellement. Elles sont utilisées à des fins statistiques et d'amélioration de l'expérience utilisateur.
 <br><br>
-4- Partage d'informations
+4- Partage d'informations<br>
 Nous ne partageons aucune information personnelle identifiable avec des tiers. Votre vie privée est importante pour nous, et nous ne vendons, n'échangeons, ni ne transférons de quelque manière que ce soit vos informations personnelles à des tiers.<br>
 <br>
-5- Sécurité des données
+5- Sécurité des données<br>
 Nous prenons des mesures appropriées pour protéger les informations que vous nous fournissez contre tout accès non autorisé, toute altération, toute divulgation ou destruction. Nous utilisons des protocoles de sécurité standard pour protéger les informations que vous nous communiquez.<br>
 <br>
-6- Consentement
+6- Consentement<br>
 En utilisant notre application, vous consentez à la collecte et à l'utilisation des informations conformément à cette politique de confidentialité.<br>
 <br>
 7- Modifications de la politique de confidentialité<br>
